# ampp-schedule-generator

./: .pre-commit-config.yaml  generate.py  pyproject.toml
ampp_schedule_generator/: generate.py  models.py
sample/: output.json
sample/from-gv/: nrktv7-prod.json
tests/: test_generate.py
