[project]
name = "ampp-schedule-generator"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "jsondiff>=2.2.1",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
